<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="app_name">iPhysio</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>

    <string name="neck">Neck</string>
    <string name="r_shoulder">RShoulder</string>
    <string name="r_elbow">RElbow</string>
    <string name="l_shoulder">LShoulder</string>
    <string name="l_elbow">LElbow</string>
    <string name="l_wrist">LWrist</string>
    <string name="r_wrist">RWrist</string>
    <string name="r_hip">RHip</string>
    <string name="r_knee">RKnee</string>
    <string name="r_ankle">RAnkle</string>
    <string name="l_hip">LHip</string>
    <string name="l_knee">LKnee</string>
    <string name="l_ankle">LAnkle</string>
    <string name="background">Background</string>


    <string name="debug">Debug : </string>
    <string name="hello">Hello </string>

    <string name="title_activity_login">Se connecter</string>
    <string name="prompt_email">Adresse courriel</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="welcome">"Bienvenue !!"</string>
    <string name="invalid_username">Adresse de courriel non valide</string>
    <string name="invalid_password">Le mot de passe doit avoir plus de 5 caractères</string>
    <string name="login_failed">La connection n\'a pas réussi</string>
    <string name="checkbox">Rester connecté</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="title_activity_program">"Programmes"</string>
    <string name="title_activity_statistics">"Statistiques"</string>
    <string name="title_activity_messaging">"Messagerie"</string>
    <string name="title_activity_alerts">"Alertes"</string>
    <string name="action_account">"Compte"</string>
    <string name="action_settings">"Paramètres"</string>
    <string name="action_history">"Historique"</string>
    <string name="action_logout">"Déconnexion"</string>

    <string name="title_activity_settings">Paramètres</string>

    <string name="language_setting">Option de langue</string>
    <string name="account_settings">Options du compte</string>
    <string name="application_settings">Options de l\'application</string>

    <string name="change_password">Changer le mot de passe</string>
    <string name="language">Langue</string>

    <string name="audio_setting">Désactiver l\'audio</string>
    <string name="visual_setting">Désactiver l\'aide visuel</string>

    <string name="new_message">New Message</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="this_is_my_message">This is my message</string>
    <string name="message_hint">Écrire votre message</string>
    <string name="send">Envoyer</string>
    <string name="title_program_list">Exercices</string>
    <string name="title_program_detail">Information sur l\'exercice</string>
    <string name="play_button">Play Button</string>
</resources>
