<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language_setting">

        <ListPreference
            app:defaultValue="Français"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="Français"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account_settings">

        <EditTextPreference
            app:key="change_password"
            app:title="@string/change_password"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/application_settings">

        <SwitchPreferenceCompat
            app:key="audio_setting"
            app:title="@string/audio_setting" />

        <SwitchPreferenceCompat
            app:key="visual_setting"
            app:title="@string/visual_setting" />

        <!--SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" /-->

    </PreferenceCategory>

</PreferenceScreen>
