<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:orientation="vertical"
    tools:context=".MainMenuActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <Button
        android:id="@+id/activity_program"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/rounded_edit_text"
        android:gravity="center"
        android:padding="55dp"
        android:text="@string/title_activity_program"
        android:textColor="@color/colorDarkGray" />

    <Button
        android:id="@+id/activity_statistics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/rounded_edit_text"
        android:gravity="center"
        android:padding="75dp"
        android:text="@string/title_activity_statistics"
        android:textColor="@color/colorDarkGray" />

    <Button
        android:id="@+id/activity_messaging"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/rounded_edit_text"
        android:padding="30dp"
        android:text="@string/title_activity_messaging"
        android:textColor="@color/colorDarkGray" />

    <Button
        android:id="@+id/activity_alerts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/rounded_edit_text"
        android:padding="30dp"
        android:text="@string/title_activity_alerts"
        android:textColor="@color/colorDarkGray" />
</LinearLayout>